--- a/src/blocks/modules/section1/section1.html
+++ b/src/blocks/modules/section1/section1.html
@@ -1,7 +1,7 @@
 <section id="about" class="section">
     <div class="section__left">
         <div class="section__left_image">
-            <img src="../img/photo.jpg" alt="photo">
+            <img src="img/photo.jpg" alt="photo">
         </div>
     </div>
     <div class="section__right">
