заменила путь к картинкам

--- a/src/blocks/modules/header/header.html
+++ b/src/blocks/modules/header/header.html
@@ -23,10 +23,10 @@
             </a>
         </ul>
         <a href="https://wa.me/79101663305" class="header-menu__icon">
-            <img src="../img/svg/ws.svg" alt="">
+            <img src="img/svg/ws.svg" alt="">
         </a>
         <a href="https://tlgg.ru/@everyday365" class="header-menu__icon">
-            <img src="../img/svg/telega.svg" alt="">
+            <img src="img/svg/telega.svg" alt="">
         </a>
     </div>
     </div>
