--- a/src/blocks/modules/section2/section2.html
+++ b/src/blocks/modules/section2/section2.html
@@ -1,7 +1,7 @@
 <section id="education" class="section">
     <div class="section__left section--none">
         <div class="section__left_image-books">
-            <img src="../img/book.jpg" alt="photo">
+            <img src="img/book.jpg" alt="photo">
         </div>
     </div>
     <div class="section__right">
