--- a/src/blocks/modules/section4/section4.html
+++ b/src/blocks/modules/section4/section4.html
@@ -2,19 +2,19 @@
     <div class="contacts">
         <div class="contacts__flex">
             <a href="https://tlgg.ru/@everyday365" class="contacts__item">
-                <img src="../img/svg/tg.svg" alt="">
+                <img src="img/svg/tg.svg" alt="">
                 <span>@everyday365</span>
             </a>
             <a href="https://wa.me/79101663305" class="contacts__item">
-                <img src="../img/svg/wa.svg" alt="">
+                <img src="img/svg/wa.svg" alt="">
                 <span>+79101663305</span>
             </a>
             <a href="mailto:katerina.baroeva@yandex.ru" class="contacts__item">
-                <img src="../img/svg/mail.svg" alt="">
+                <img src="img/svg/mail.svg" alt="">
                 <span>katerina.baroeva@yandex.ru</span>
             </a>
             <a href="https://instagram.com/katerina_baroeva" class="contacts__item ">
-                <img src="../img/svg/inst.svg" alt="">
+                <img src="img/svg/inst.svg" alt="">
                 <span>katerina_baroeva </span>
             </a>
         </div>
