--- a/src/blocks/modules/section2/section2.html
+++ b/src/blocks/modules/section2/section2.html
@@ -6,7 +6,7 @@
     </div>
     <div class="section__right">
         <div class="content-two">
-            <h2>Образовние</h2>
+            <h2>Образование</h2>
             <div class="content-two__blocks">
                 <div class="content-two__top">
                     <div class="content-two-top__left">
