--- a/src/blocks/modules/mobile/mobile.html
+++ b/src/blocks/modules/mobile/mobile.html
@@ -1,7 +1,7 @@
 <div class="header-menu-mobile">
     <div class="header-menu-mobile__in">
         <div class="header-menu-mobile__closer">
-            <img src="../img/close.png" alt="close">
+            <img src="img/close.png" alt="close">
         </div>
         <ul class="header-menu-mobile__list">
             <a href="#about" class="header-menu-mobile__link">
